--- a/app/assets/stylesheets/public/registrations.css
+++ b/app/assets/stylesheets/public/registrations.css
@@ -20,26 +20,34 @@
   flex-grow: 1;
 }
 
-.label1 {
-  margin-left: 5rem;
-}
-
-.label2 {
-  margin-left: 4rem;
+.label1, .label2 {
+  width: 180px;
+  text-align: end;
 }
 
 .label3 {
-  width: 192px;
+  width: 180px;
   display: flex;
   justify-content: flex-end;
+  text-align: end;
 }
 
 .label4 {
-  width: 192px;
+  width: 180px;
+  text-align: end;
+}
+
+.label5 {
+  padding-left: 0px;
+}
+
+.link {
+  margin-bottom: 16px;
 }
 
 #email, #nickname, #password1, #password2 {
   padding-left: 32px;
+  width: 100%;
 }
 
 .email, .nickname, .password {
@@ -55,4 +63,86 @@
 
 .help-block {
   color: red;
+}
+
+.btn1 {
+  width: 150px;
+}
+
+@media (max-width: 767.5px) {
+  .label5, .link-button {
+    width: auto;
+  }
+
+  .field {
+    width: 100%;
+    margin-right: 0px;
+    margin-left: 0px;
+  }
+
+  .all-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .actions {
+    width: 100%;
+  }
+
+  .box {
+    width: 70%;
+  }
+}
+
+@media (max-width: 679.5px) {
+  .col {
+    flex-direction: column;
+    align-items: center;
+  }
+  #email, #nickname, #password1, #password2 {
+    width: 300px;
+  }
+
+  .has-error {
+    width: 303px;
+    height: 31px;
+  }
+
+  .label1, .label2, .label4 {
+    width: 300px;
+    text-align: start;
+  }
+
+  .label3 {
+    margin-bottom: 8px;
+  }
+
+  .label3 {
+    width: 300px;
+    display: block;
+    text-align: start;
+  }
+
+  .label3 p {
+    display: inline;
+  }
+
+  .all-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+@media (max-width: 499.5px) {
+  .box {
+    width: 100%;
+  }
+}
+
+@media (max-width: 319.5px) {
+  .label1, .label2, .label3, .label4, #email, #nickname, #password1, #password2, .has-error, .form1, .form2, .form3, .form4 {
+    width: 100%;
+  }
 }
