--- a/app/assets/stylesheets/public/user.css
+++ b/app/assets/stylesheets/public/user.css
@@ -23,10 +23,15 @@
   display: none;
 }
 
+
+.form {
+  position: relative;
+}
+
 .profile-image-label {
   position: absolute;
-  Top: 30%;
-  Right: 25%;
+  Top: -15%;
+  Right: 23%;
   font-size: 2em
 }
 
@@ -131,23 +136,35 @@ label {
   font-size: 18px;
 }
 
+.has-error {
+  border: solid 1.5px red;
+}
+
+.help-block {
+  color: red;
+}
 
 @media (max-width: 840px) {
   .subbox {
-  margin: 0px;
+    margin: 0px;
   }
 }
 
 @media (max-width: 767.5px) {
   .subbox {
-  margin: 0px 24px;
+    margin: 0px 24px;
   }
 
   .profile-information {
-  border: solid 1px black;
-  margin-right: 0px;
-  margin-bottom: 24px;
-  width: 350px;
+    border: solid 1px black;
+    margin-right: 0px;
+    margin-bottom: 24px;
+    width: 350px;
+  }
+
+  .profile-image-label {
+    Top: -60px;
+    Right: 70px;
   }
 }
 
