--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,6 +53,9 @@
           <li>
             <%= link_to 'コメント一覧', admin_comments_path, class: 'nav-link text-dark' %>
           </li>
+          <li>
+            <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: 'nav-link text-dark' %>
+          </li>
           <% end %>
           <% else %>
           <li>
@@ -78,12 +81,12 @@
     <footer class="border-top border-dark fixed-bottom">
       <div class="container h-100">
         <div class="row justify-content-between align-items-center h-100">
-          <div class="col-md-6">
+          <div class="col-md-6 text-center">
             <%= image_tag 'title2.png', class: 'title2' %>
           </div>
 
-          <div class="col-md-5 d-flex align-items-center">
-            <p class="h4 ">Knowleges are everything in life.</p>
+          <div class="col-md-5 d-flex align-items-center justify-content-center">
+            <p>Knowleges are everything in life.</p>
           </div>
         </div>
       </div>
