--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -3,58 +3,58 @@
 <% end %>
 <div class="container-fluid h-100 mx-0 allbox">
   <div class="row justify-content-center align-items-center h-100">
-    <div class="col-md-7 col-lg-6 box">
+    <div class="col-md-8 col-lg-6 box">
       <h3 class="text-center my-5">新規登録</h3>
-      <%= form_with model: @user, url: registration_path(resource_name) do |f| %>
+      <%= form_with model: @user, url: registration_path(resource_name), class: 'all-form' do |f| %>
       <div class="row field justify-content-center mb-3">
-        <div class="col-xl-8 col-md-11 d-flex px-0">
+        <div class="col-xl-8 col-md-11 d-flex px-0 col">
           <%= f.label :nickname, "ニックネーム：", class: 'label1' %>
           <div class="form1 position-relative px-0">
           <i class="fa-solid fa-user nickname"></i>
-          <%= f.text_field :nickname, autofocus: true, placeholder: "ニックネーム", class: 'w-100', id: "nickname" %>
+          <%= f.text_field :nickname, placeholder: "ニックネーム", id: "nickname" %>
           </div>
         </div>
       </div>
 
       <div class="row field justify-content-center mb-3">
-        <div class="col-xl-8 col-md-11 d-flex px-0">
+        <div class="col-xl-8 col-md-11 d-flex px-0 col">
           <%= f.label :email, "メールアドレス：", class: 'label2' %>
           <div class="form2 position-relative px-0">
           <i class="fa-solid fa-envelope email"></i>
-          <%= f.email_field :email, autofocus: true, placeholder: "メールアドレス", class: 'w-100', id: "email" %>
+          <%= f.email_field :email, placeholder: "メールアドレス", id: "email" %>
           </div>
         </div>
       </div>
 
       <div class="row field justify-content-center mb-3">
-        <div class="col-xl-8 col-md-11 d-flex px-0">
-          <div class="label3 text-right">
+        <div class="col-xl-8 col-md-11 d-flex px-0 col">
+          <div class="label3">
           <%= f.label :password, "パスワード", class: 'mb-0' %>
           <% if @minimum_password_length %>
-          <p>(<%= @minimum_password_length %>文字以上)：</p>
+          <p class="mb-0">(<%= @minimum_password_length %>文字以上)：</p>
           <% end %>
           </div>
           <div class="form3 position-relative px-0">
             <i class="fa-solid fa-lock password"></i>
-            <%= f.password_field :password, autocomplete: "new-password", placeholder: "パスワード", class: 'w-100', id: "password1" %>
+            <%= f.password_field :password, autocomplete: "new-password", placeholder: "パスワード", id: "password1" %>
           </div>
         </div>
       </div>
 
       <div class="row field justify-content-center mb-4">
-        <div class="col-xl-8 col-md-11 d-flex px-0">
-          <div class="label4 text-right">
+        <div class="col-xl-8 col-md-11 d-flex px-0 col">
+          <div class="label4">
           <%= f.label :password_confirmation, "パスワード(確認)：" %>
           </div>
           <div class="form4 position-relative px-0">
             <i class="fa-solid fa-lock password"></i>
-            <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "パスワード(確認)", class: 'w-100', id: "password2" %>
+            <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "パスワード(確認)", id: "password2" %>
           </div>
         </div>
       </div>
 
       <div class="actions text-center mb-3">
-        <%= f.submit "登録", class: 'btn btn-success rounded-pill w-25' %>
+        <%= f.submit "登録", class: 'btn btn-success rounded-pill btn1' %>
       </div>
       <% end %>
 
