--- a/app/views/public/shared/_links.html.erb
+++ b/app/views/public/shared/_links.html.erb
@@ -1,31 +1,31 @@
 <%- if controller_name != 'sessions' %>
-  <div class="row justify-content-center mb-3">
-    <div class="col-md-4 text-right">
+  <div class="row justify-content-center link">
+    <div class="col-md-4 text-right label5">
       <p class="mb-0">既に登録済みの方→</p>
     </div>
-    <div class="col-md-2 px-0">
+    <div class="col-md-2 px-0 link-button">
       <%= link_to "ログイン", new_session_path(resource_name) %><br />
     </div>
   </div>
 <% end %>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <div class="row justify-content-center mb-3">
-    <div class="col-md-4 text-right">
+  <div class="row justify-content-center link">
+    <div class="col-md-4 text-right label">
       <p class="mb-0">未登録の方→</p>
     </div>
-    <div class="col-md-4 px-0">
+    <div class="col-md-4 px-0 link-button">
       <%= link_to "新規登録", new_registration_path(resource_name) %>
     </div>
   </div>
 <% end %>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-  <div class="row justify-content-center mb-3">
-    <div class="col-md-5 text-right">
+  <div class="row justify-content-center link">
+    <div class="col-md-5 text-right label">
       <p class="mb-0">パスワードを忘れた方→</p>
     </div>
-    <div class="col-md-5 px-0">
+    <div class="col-md-5 px-0 link-button">
       <%= link_to "パスワード再設定", new_password_path(resource_name) %>
     </div>
   </div>
