--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -7,7 +7,7 @@
       <div class="text-center my-3">
         <%= image_tag @user.get_profile_image, class: 'profile-image' %>
       </div>
-      <%= form_with model: @user, url: users_path, method: :PATCH do |f| %>
+      <%= form_with model: @user, url: users_path, method: :PATCH, class: 'form' do |f| %>
         <%= f.label :profile_image, class: 'fa-solid fa-camera profile-image-label' do %>
           <%= f.file_field :profile_image, class: 'profile-image-select' %>
         <% end %>
