--- a/app/views/admin/knowledges/index.html.erb
+++ b/app/views/admin/knowledges/index.html.erb
@@ -1,2 +1,70 @@
-<h1>Admin::Knowledges#index</h1>
-<p>Find me in app/views/admin/knowledges/index.html.erb</p>
+<% content_for :css do %>
+    <%= stylesheet_link_tag 'admin/knowledges/index.css' %>
+<% end %>
+<div class="container-fluid allbox pt-4">
+  <div class="search d-flex justify-content-between">
+    <%= form_with url: admin_knowledges_path, method: :GET, class: 'search-form position-relative' do |f| %>
+      <%= f.text_field :search, placeholder: "キーワード検索", class: 'w-100 pl-1' %>
+      <%= image_submit_tag("search_image.png", class: 'search_image') %>
+    <% end %>
+    <p class="h5">全投稿数：<%= @knowledges.count %>件</p>
+  </div>
+
+  <div class="row justify-content-center mt-3">
+    <div class="col-8 categories-search">
+      <h5 class="categories-title text-center mt-3">カテゴリー一覧</h5>
+      <%= form_with url: admin_knowledges_path, method: :GET, class: 'categories-search-form' do |f| %>
+        <%= f.collection_check_boxes :categories_search, @categories, :id, :name, {include_hidden: false} do |b| %>
+          <%= b.label class: 'label-checkbox mr-2' do %>
+            <%= b.check_box class: 'mr-1'%>
+            <%= b.text %>
+          <% end %>
+        <% end %>
+        <div class="button1 d-flex justify-content-center">
+          <%= f.submit "検索", class: 'search-button mr-3 mb-3' %>
+          <%= link_to "解除", admin_knowledges_path, class: 'btn lift-button' %>
+        </div>
+      <% end %>
+    </div>
+  </div>
+
+  <div class="row px-3 pt-3 article-list">
+    <% @knowledges.each do |knowledge| %>
+    <%= link_to admin_knowledge_path(knowledge.id), class: 'text-dark' do %>
+    <div class="article px-3 py-1">
+      <%= image_tag knowledge.get_image, class: 'image1' %>
+      <div class="article-content ml-3 flex-grow-1">
+        <h5 class="font-weight-bold"><%= knowledge.title %></h5>
+        <% end %>
+        <div class="article-information d-flex flex-wrap">
+          <div class="d-flex align-items-center article-detail flex-wrap">
+            <span class="classification mr-2 mb-2"><%= knowledge.classification_i18n %></span>
+            <span class="category mr-3 mb-2"><%= knowledge.category.name %></span>
+            <div class="average-score mr-3 mb-2">
+              <div class="average-star-rating">
+                <div class="star-rating-front" style="width: <%= knowledge.avg_rate_percentage %>%">★★★★★</div>
+                <div class="star-rating-back">★★★★★</div>
+              </div>
+              <div class="average-score-display">
+                <%= knowledge.avg_rate %>/5
+              </div>
+            </div>
+            <div class="contributor d-flex">
+              <span class="date mr-2"><%= knowledge.created_at.strftime('%Y/%m/%d') %></span>
+              <%= image_tag knowledge.user.get_profile_image, class: 'image2 mr-2' %>
+              <p class="mb-0"><%= knowledge.user.nickname %></p>
+            </div>
+            <div class="link flex-grow-1 text-right">
+            <%= link_to "削除", admin_knowledge_path(knowledge.id), method: :delete, class: 'btn delete-button' %>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <% end %>
+    <div class="col-md-12 mb-3 per d-flex justify-content-center">
+      <span class="mr-4"><%= page_entries_info @knowledges %></span>
+      <%= paginate @knowledges %>
+    </div>
+  </div>
+</div>
