--- a/app/assets/stylesheets/admin/knowledges/index.css
+++ b/app/assets/stylesheets/admin/knowledges/index.css
@@ -5,7 +5,7 @@
 }
 
 .allbox {
-  padding: 16px 48px 0px;
+  padding: 16px 24px 0px;
 }
 
 .article-list, .article {
@@ -18,12 +18,12 @@
 
 .article {
   display: flex;
-  width: 48%;
+  width: 49%;
   margin-bottom: 16px;
 }
 
 .article:nth-of-type(2n+1) {
-  margin-right: 4%;
+  margin-right: 2%;
 }
 
 .image1 {
@@ -130,4 +130,18 @@
   background-color: #FFB6C1;
   border: solid 2px red;
   padding: 0;
+}
+
+@media (max-width: 1099.5px) {
+  .article:nth-of-type(2n+1) {
+    margin-right: 0px;
+  }
+
+  .article-information, .article-detail, .article {
+    width: 100%;
+  }
+
+  .article-list {
+    flex-direction: column;
+  }
 }
