--- a/app/views/admin/knowledges/index.html.erb
+++ b/app/views/admin/knowledges/index.html.erb
@@ -12,14 +12,18 @@
 
   <div class="row justify-content-center mt-3">
     <div class="col-8 categories-search">
-      <h5 class="categories-title text-center mt-3">カテゴリー一覧</h5>
+      <h5 class="categories-title text-center my-3">カテゴリー一覧</h5>
       <%= form_with url: admin_knowledges_path, method: :GET, class: 'categories-search-form' do |f| %>
+        <div class="categories-checkbox d-flex flex-wrap">
         <%= f.collection_check_boxes :categories_search, @categories, :id, :name, {include_hidden: false} do |b| %>
-          <%= b.label class: 'label-checkbox mr-2' do %>
-            <%= b.check_box class: 'mr-1'%>
-            <%= b.text %>
-          <% end %>
+          <div class="col-2 px-2 mb-3">
+            <%= b.label class: 'label-checkbox d-flex' do %>
+              <p><%= b.check_box class: 'mr-1'%></p>
+              <p><%= b.text %></p>
+            <% end %>
+          </div>
         <% end %>
+        </div>
         <div class="button1 d-flex justify-content-center">
           <%= f.submit "検索", class: 'search-button mr-3 mb-3' %>
           <%= link_to "解除", admin_knowledges_path, class: 'btn lift-button' %>
@@ -29,8 +33,8 @@
   </div>
 
   <div class="row px-3 pt-3 article-list">
-    <% @knowledges.each do |knowledge| %>
-    <%= link_to admin_knowledge_path(knowledge.id), class: 'text-dark' do %>
+    <% @knowledges.each_with_index do |knowledge, i| %>
+    <%= link_to admin_knowledge_path(knowledge.id, search_categories: @knowledges.distinct().pluck(:category_id), index: i), class: 'text-dark' do %>
     <div class="article px-3 py-1">
       <%= image_tag knowledge.get_image, class: 'image1' %>
       <div class="article-content ml-3 flex-grow-1">
