--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -25,7 +25,7 @@
               <% end %>
             </td>
             <td>
-              <%= link_to knowledge_path(knowledge.id), class: 'text-dark font-weight-bold knowledge-title' do %>
+              <%= link_to knowledge_path(knowledge.id, search_categoires: ''), class: 'text-dark font-weight-bold knowledge-title' do %>
               <%= knowledge.title %>
               <% end %>
               <div class="classification-and-category">
