--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -1,5 +1,5 @@
 <% content_for :css do %>
-    <%= stylesheet_link_tag 'admin/category.css' %>
+    <%= stylesheet_link_tag 'admin/categories.css' %>
 <% end %>
 <div class="container-fluid h-100 mx-0 allbox">
   <div class="row justify-content-center align-items-center h-100">
