--- a/app/assets/stylesheets/admin/knowledges/index.css
+++ b/app/assets/stylesheets/admin/knowledges/index.css
@@ -22,6 +22,10 @@
   margin-bottom: 16px;
 }
 
+.article:hover {
+  background-color: #99CCFF;
+}
+
 .article:nth-of-type(2n+1) {
   margin-right: 2%;
 }
