--- a/app/views/public/comments/new.html.erb
+++ b/app/views/public/comments/new.html.erb
@@ -34,7 +34,7 @@
       <div class="comment">
       <%= f.label :content, "コメント：", class: 'mb-0 label2' %>
       <%= f.text_area :content, placeholder: "コメント内容", class: "content flex-grow-1 pl-2" %>
-      <%= f.hidden_field :categories_id, multiple: true, :value => @search_categories %>
+      <%= f.hidden_field :categories_id, :value => @search_categories %>
       <%= f.hidden_field :index, :value => @index %>
       </div>
       <div class="text-center post">
