--- a/app/views/admin/comments/index.html.erb
+++ b/app/views/admin/comments/index.html.erb
@@ -33,7 +33,7 @@
       <% end %>
     <% end %>
     <% end %>
-    <div class="pagination text-center mt-3 w-100 per d-flex justify-content-center">
+    <div class="text-center mt-3 w-100 per d-flex justify-content-center">
       <span class="mr-4"><%= page_entries_info @comments %></span>
       <%= paginate @comments %>
     </div>
