--- a/app/assets/stylesheets/public/top.css
+++ b/app/assets/stylesheets/public/top.css
@@ -91,6 +91,10 @@ thead th {
   color: #e1e1e1;
 }
 
+tbody tr:hover {
+  background-color: #FFDDFF;
+}
+
 tbody tr:nth-child(n+1):nth-child(-n+8) {
   border-bottom: solid 1.5px #EEEEEE;
 }
