--- a/app/views/public/knowledges/choose.html.erb
+++ b/app/views/public/knowledges/choose.html.erb
@@ -6,13 +6,13 @@
     <div class="col-sm-5 col-xl-4 d-flex flex-column justify-content-center align-items-center box1 bg-white">
       <%= image_tag 'trivia.png', class: 'image1' %>
       <p class="text-center">何か面白い話を探している方は<br />こちら</p>
-      <%= image_tag 'down_arrow', class: 'image2' %>
+      <%= image_tag 'down_arrow.png', class: 'image2' %>
       <%= link_to '雑学', knowledges_path(classification: 0), class: 'btn btn1 rounded-pill d-block mx-auto' %>
     </div>
     <div class="col-sm-5 col-xl-4 d-flex flex-column justify-content-center align-items-center box2 bg-white">
       <%= image_tag 'experience.png', class: 'image1' %>
       <p class="text-center">他の人の経験談を知りたい方は<br />こちら</p>
-      <%= image_tag 'down_arrow', class: 'image2' %>
+      <%= image_tag 'down_arrow.png', class: 'image2' %>
       <%= link_to '経験談', knowledges_path(classification: 1), class: 'btn btn2 rounded-pill d-block mx-auto' %>
     </div>
   </div>
