[Finish]Share Knowledges

--- a/app/assets/stylesheets/public/top.css
+++ b/app/assets/stylesheets/public/top.css
@@ -34,6 +34,10 @@ thead th {
   border-right: dotted 1.5px black;
 }
 
+.col3 {
+  width: 150px;
+}
+
 .classification-and-category {
   margin-top: 4px;
   font-size: 14px;
